--- a/medio-curso/medio-curso.csproj
+++ b/medio-curso/medio-curso.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>medio_curso</RootNamespace>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="ScottPlot" Version="4.0.42"/>
+  </ItemGroup>
 </Project>
